[gd_scene load_steps=8 format=3 uid="uid://b2s6t1rp8pob"]

[ext_resource type="Script" path="res://Scenes/Player/Attacks/blade_beam.gd" id="1_mb2uk"]
[ext_resource type="Texture2D" uid="uid://b2gh5hlj8pod0" path="res://Art/Effects/BladeBeam.png" id="2_0ocvu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5svo"]
size = Vector2(20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b35r"]
atlas = ExtResource("2_0ocvu")
region = Rect2(0, 0, 21, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m48u"]
atlas = ExtResource("2_0ocvu")
region = Rect2(21, 0, 21, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8v58"]
atlas = ExtResource("2_0ocvu")
region = Rect2(42, 0, 21, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_lbgno"]
animations = [{
"frames": [],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b35r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m48u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8v58")
}],
"loop": true,
"name": &"loop",
"speed": 14.0
}]

[node name="BladeBeam" type="Area2D"]
script = ExtResource("1_mb2uk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_y5svo")

[node name="BladeSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_lbgno")
animation = &"loop"
autoplay = "loop"

[node name="BladeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="BladeSprite" to="." method="_on_punch_sprite_animation_finished"]
[connection signal="timeout" from="BladeTimer" to="." method="_on_blade_timer_timeout"]
